assets/css/style.css
/* Padding, margin and border removed */

* {
    padding: 0;
    margin: 0;
    border: none;
}

/* body */

.background {
    background: url(../images/background/orphans-castle-ruins.webp) no-repeat center center;
    background-attachment: fixed;
}

a {
    text-decoration: none;
    font-family: 'Montserrat', sans-serif;
}

/* Page Title */

.index-page-title {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    margin-top: 80px;
    margin-bottom: 100px;
    color: rgb(255, 255, 255);
    font-size: 4rem;
    text-shadow: -4px 0px 2px black, -3px 3px 1em #000000, -9px 1px 0.2em #000000;
}

h2 {
    text-align: center;
    font-size: 2rem;
    padding-bottom: 5px;
    border-bottom: 2px solid #000000;
}

#question {
    text-align: center;
    font-size: 2rem;
    padding-bottom: 5px;
    border-bottom: 2px solid #000000;
}

/* Container styling */

.container {
    color: #fff;
    background-color: rgb(12 12 12 / 60%);
    max-width: 550px;
    padding: 20px;
    border-radius: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: inset 0px 0px 10px 2px;
    margin: auto;
    margin-bottom: 100px;
}

.hide {
    display: none;
}

/* Button styling */

.btn {
    border: 2px solid #fff;
    border-radius: 5px;
    color: #fff;
    background-color: #000000;
    text-align: center;
    padding: 2px 10px;
    font-size: 1rem;
    transition: all 0.2s;
    cursor: pointer;
    font-family: 'Montserrat', sans-serif;
}

.btn-other {
    border: 2px solid #fff;
    border-radius: 5px;
    color: #fff;
    background-color: #000000;
    text-align: center;
    padding: 2px 10px;
    font-size: 1rem;
    transition: all 0.2s;
    cursor: pointer;
    width: 140px;
    font-family: 'Montserrat', sans-serif;
}

.btn-other:hover {
    background-color: #fff;
    color: #000000;
    border: 2px solid #000000;
}

.btn:hover:not([disabled]) {
    background-color: #fff;
    color: #000000;
    border: 2px solid #000000;
}

.btn:disabled {
    cursor: none;
}

.btn-display-normal {
    display: grid;
    justify-content: center;
    gap: 10px;
    margin: 20px 0;
}

.btn-display {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin: 20px 0;
    justify-content: center;
}

#back-to-index-btn {
    margin: 20px auto;
}

#back-to-index-btn a {
    color: #fff;
}

#back-to-index-btn a:hover {
    color: #000000;
}

/* Instructions container */

#instructions-container {
    margin-left: 5%;
    text-align: left;
    font-size: 1.2rem;
}

#instructions-container ol {
    font-family: 'Open sans', sans-serif;
}

/* Scoreboard container*/

.score-list {
    padding: 15px;
    text-align: center;
    list-style-type: none;
    font-size: 1.2rem;
    font-weight: bold;
    letter-spacing: 1.5px;
}

ul {
    margin: 2rem;
}

ul li {
    margin: -15px 0;
}

/* 404 error page */

.page-title-error {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    margin-top: 100px;
    color: rgb(0, 0, 0);
    font-size: 3rem;
}

.error-container {
    text-align: center;
    display: flex;
    flex-direction: column;
    font-family: 'Open Sans', sans-serif;
}

h3 {
    text-align: center;
    font-size: 2rem;
    padding-bottom: 5px;
}

/* Footer and Networks */

.network-container {
    color: #fff;
    background-color: rgb(12 12 12 / 60%);
    max-width: 550px;
    border-radius: 30px;
    box-shadow: inset 0px 0px 10px 2px;
    margin: auto;
    text-align: center;
}

.networks {
    display: flex;
}

.each-network {
    margin: 5px auto;
}

.networks i {
    list-style-type: none;
    display: inline;
    font-size: 160%;
    margin: 1%;
    padding: 1%;
    color: #000000;
}

.networks i:hover {
    color: #fff;
}

/* Styling to Score Area */

#score-area {
    display: flex;
    justify-content: space-between;
    margin-bottom: 5px;
}

.main-counter-text {
    text-align: center;
}

.main-text {
    font-weight: bold;
}

.question-counter {
    color: #000000;
    margin: auto;
    font-weight: bold;
}

.score-item-content {
    text-align: center;
}

/* Progression bar */

#progress-questions-bar {
    width: 100px;
    height: 15px;
    border: 2px solid #fff;
    border-radius: 5px;
}

#fill-up-progress-question-bar {
    height: 100%;
    background-color: #fff;
    width: 0%;
}

/* Username Input Styling */

#form-display {
    display: flex;
    justify-content: center;
}

.username-label {
    color: #fff;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.2rem;
    text-align: center;
}

.username-form {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
}

.username-input {
    height: 20px;
    padding: 2px 20px;
    width: 100px;
    border-radius: 5px;
    text-align: center;
}

.submit-btn {
    padding: 2px 40px;
}

/* Styling to Answers */

.correct-answer {
    background: rgb(21, 219, 4);
}

.wrong-answer {
    background: rgb(236, 32, 32);
}

/* Media queries */

/* for medium screens sizes from 1280px wide and down */

@media screen and (max-width: 1280px) {
    .index-page-title {
        font-size: 3rem;
        margin-top: 100px;
        margin-bottom: 100px;
    }

    .network-container {
        margin-top: 100px;
    }

}

/* for medium screens sizes from 768px wide and down */

@media screen and (max-width: 768px) {
    .index-page-title {
        font-size: 2.5rem;
        margin-bottom: 90px;
    }

    h2 {
        font-size: 1.4rem;
    }

    #question {
        font-size: 1.4rem;
    }

    .btn {
        font-size: 1rem;
    }

    .btn-other {
        font-size: 1rem;
    }

    #instructions-container {
        font-size: 1rem;
    }

    .score-list {
        font-size: 1rem;
    }

    .network-container {
        max-width: 475px;
    }

    .networks i {
        font-size: 145%;
        color: #fff;
    }

    .container {
        max-width: 475px;
    }

}

/* for small screens sizes from 576px wide and down */

@media screen and (max-width: 576px) {
    .index-page-title {
        font-size: 2rem;
        margin-top: 20px;
        margin-bottom: 70px;
    }

    h2 {
        font-size: 1.1rem;
    }

    #question {
        font-size: 1.1rem;
    }

    .btn {
        font-size: 0.8rem;
    }

    .btn-other {
        font-size: 0.8rem;
    }

    #instructions-container {
        font-size: 0.8rem;
    }

    .score-list {
        font-size: 0.8rem;
    }

    .container {
        margin-bottom: 75px;
    }

    .networks i {
        font-size: 137%;
    }

    .network-container {
        margin-top: 100px;
        margin-bottom: 0;
    }

    .main-counter-text {
        font-size: 0.7rem;
    }

    .main-txt {
        font-size: 0.7rem;
    }

    .username-label {
        font-size: 1rem;
    }

}

/* for extra small screen sizes from 335px wide and down */

@media screen and (max-width: 335px) {
    .index-page-title {
        font-size: 1.7rem;
        margin-bottom: 50px;
    }

    h2 {
        font-size: 1rem;
    }

    #question {
        font-size: 1rem;
    }

    .btn {
        font-size: 0.7rem;
    }

    .btn-other {
        font-size: 0.7rem;
    }

    .network-container {
        margin-top: 0;
    }

    #instructions-container {
        font-size: 0.7rem;
    }

    .score-list {
        font-size: 0.7rem;
    }

    .networks i {
        font-size: 110%;
    }

    .username-label {
        font-size: 0.8rem;
    }

    .container {
        margin-bottom: 20px;
    }

    .network-container {
        margin-top: 20px;
    }

    .btn-intructions {
        margin-top: 10px;
        margin-bottom: 0;
    }
}

